# pilatus-leptos

./: .gitignore  Cargo.toml  LICENSE  flake.nix
app/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css
app/src/: app.rs  lib.rs  main.rs
app/style/: main.scss
pilatus-examples-leptos/: Cargo.toml
pilatus-examples-leptos/src/: greeter.rs  lib.rs
pilatus-leptos/: Cargo.toml
pilatus-leptos/src/: lib.rs  point.rs  recipe.rs  server_fn.rs
