[workspace]
resolver = "3"
members = [
    "app",
    "pilatus-leptos",
    "pilatus-examples-leptos"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8"
leptos = "0.8"
leptos_axum = "0.8"
leptos_router = "0.8"
leptos_meta = "0.8"
gloo-net = "0.6"
thaw = { git = "https://github.com/thaw-ui/thaw.git" }
minfac = "0.1"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# [patch."https://github.com/mineichen/pilatus.git"]
# pilatus = { path = "../pilatus/pilatus" }
# pilatus-rt = { path = "../pilatus/pilatus-rt" }
# pilatus-axum = { path = "../pilatus/pilatus-axum" }
# pilatus-axum-rt = { path = "../pilatus/pilatus-axum-rt" }
# pilatus-engineering = { path = "../pilatus/pilatus-engineering" }
# pilatus-engineering-rt = { path = "../pilatus/pilatus-engineering-rt" }
# pilatus-engineering-camera = { path = "../pilatus/pilatus-engineering-camera" }
# pilatus-engineering-camera-rt = { path = "../pilatus/pilatus-engineering-camera-rt" }
