[package]
name = "pilatus-examples-leptos"
version.workspace = true
edition.workspace = true

[dependencies]
futures-util = "0.3"
leptos.workspace = true
leptos_router.workspace = true
thaw.workspace = true
pilatus = { git = "https://github.com/mineichen/pilatus.git", default-features = false }
gloo-net.workspace = true
tokio = { version = "1", features = ["time"], optional = true }
gloo-timers = { version = "0.3", features = ["futures", "futures-core"] }
serde_json = "1"
anyhow = "1"
